# Oxide

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
crates/oxide/: Cargo.toml
crates/oxide-cli/src/: main.rs
crates/oxide-components/: Cargo.toml
crates/oxide-components/src/: lib.rs
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: context.rs  lib.rs  reactive.rs  runtime.rs
crates/oxide-dom/: Cargo.toml
crates/oxide-dom/src/: hooks.rs  lib.rs
crates/oxide-macros/src/: lib.rs
crates/oxide-resiliency/src/: lib.rs
crates/oxide-router/: Cargo.toml
crates/oxide-router/src/: lib.rs
crates/oxide/src/: lib.rs
examples/showcase/: docs.html  index.html  playground.html
examples/showcase/src/: lib.rs
examples/todo/: Cargo.toml  index.html
examples/todo/src/: lib.rs
