[workspace]
resolver = "2"
members = [
    "crates/oxide-core",
    "crates/oxide-macros",
    "crates/oxide-dom",
    "crates/oxide-telemetry",
    "crates/oxide-resiliency",
    "crates/oxide-router",
    "crates/oxide",
    "crates/oxide-cli",
    "examples/counter",
    "examples/todo",
    "examples/showcase",
]

# CLI targets the host platform, not WASM — build it explicitly:
#   cargo build -p oxide-cli
#   cargo install --path crates/oxide-cli

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/IEvangelist/Oxide"
