[package]
name = "oxide-router"
description = "Client-side router for Oxide WASM applications"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oxide-core = { path = "../oxide-core" }
oxide-dom = { path = "../oxide-dom" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Location",
    "History",
    "Event",
    "PopStateEvent",
    "HtmlAnchorElement",
    "Document",
    "Element",
    "Node",
    "EventTarget",
    "Url",
]
