[package]
name = "oxide"
description = "Oxide — A Rust frontend framework compiling to WebAssembly"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oxide-core = { path = "../oxide-core" }
oxide-macros = { path = "../oxide-macros" }
oxide-dom = { path = "../oxide-dom" }
oxide-telemetry = { path = "../oxide-telemetry" }
oxide-resiliency = { path = "../oxide-resiliency" }
oxide-router = { path = "../oxide-router" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Element"]
