[package]
name = "todo-example"
description = "Todo app example for the Oxide framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
oxide = { path = "../../crates/oxide" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["KeyboardEvent"]
